hosts/zephyr/k8s-haven/haven-all.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: haven
