hosts/zephyr/k8s-haven/haven-namespace-secrets.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: haven
