hosts/zephyr/k8s-haven/haven-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haven
  namespace: haven
  labels:
    app: haven
spec:
  replicas: 1
  selector:
    matchLabels:
      app: haven
  template:
    metadata:
      labels:
        app: haven
    spec:
      containers:
        - name: haven
          image: ghcr.io/ancsemi/haven:latest
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            limits:
              memory: 512Mi
              cpu: "500m"
            requests:
              memory: 256Mi
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: haven
  namespace: haven
  labels:
    app: haven
spec:
  selector:
    app: haven
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
