hosts/zephyr/k8s-haven/haven-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haven
  namespace: haven
  labels:
    app: haven
spec:
  type: ClusterIP
  selector:
    app: haven
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
